oblig2patch/src/tests/oblig2/errors/procedure3_fail.cmp
program procedure3_fail
begin

	proc Add( val1 : int , val2 : int ) : int
	begin 
            in
	    return /* error, no return value */
	end;
	proc main()
	begin 
            in
	    printint( Add( 40, 2 ) )
	end
end